# lazy-freeze

./: .flake8  LICENSE  MANIFEST.in  Makefile  README.md  examples.py  pyproject.toml  requirements-dev.txt
lazy_freeze/: __init__.py  _decorator.py  decorator.py
scripts/: publish.sh
src/lazy_freeze/: __init__.py  _decorator.py
tests/: test_lazy_freeze.py
