[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-freeze"
version = "0.1.0"
description = "A decorator that makes objects immutable after their hash is calculated"
readme = "README.md"
authors = [
    { name = "Ofek Shilon", email = "ofekshilon@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
keywords = ["hash", "immutable", "dictionary", "frozen", "decorator"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/ofekshilon/lazy-freeze"
"Bug Tracker" = "https://github.com/ofekshilon/lazy-freeze/issues"

[tool.ruff]
include = ["pyproject.toml", "lazy_freeze/**/*.py", "tests/**/*.py", "examples.py"]
indent-width = 4
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
