[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-freeze"
version = "0.2.0"
description = "A decorator that makes objects immutable after their hash is calculated"
readme = "README.md"
authors = [
    { name = "Ofek Shilon", email = "ofekshilon@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
keywords = ["hash", "immutable", "dictionary", "frozen", "decorator"]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/ofekshilon/lazy-freeze"
"Repository" = "https://github.com/ofekshilon/lazy-freeze.git"
"Issues" = "https://github.com/ofekshilon/lazy-freeze/issues"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "examples.py"]
indent-width = 4
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
